ArrayList changed to LinkedList